tests/unit/default/syntax-error/056-create-table-parens-name-colon-type-parenses-default.x.t
---- IN ----
+%table(id:decimal()=42|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...cimal()=42` near `|` at position 23 - at line 1
---- EXIT ----
1
